--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, #6a11cb, #2575fc); /* Gradient from purple to blue */
+  background-color: #2f2f2f;
   color: whitesmoke;
 }
 
@@ -51,7 +51,7 @@
   font-family: inherit;
   font-size: 1.2em;
   font-weight: 700;
-  background-color: #2575fc;  /* Blue background for button */
+  background-color: #ff5722; /* Bold orange button */
   padding: 0.6em 1em;
   border-radius: 0.2em;
   border: 0;
